--- a/website/templates/index.html
+++ b/website/templates/index.html
@@ -15,6 +15,8 @@
     <link rel="stylesheet" href="{{ url_for('static', filename='css/Hero-Carousel-images.css') }}">
     <link rel="stylesheet" href="{{ url_for('static', filename='css/Lightbox-Gallery-baguetteBox.min.css') }}">
     <link rel="stylesheet" href="{{ url_for('static', filename='css/RandomStyles.css') }}">
+    <script src="https://polyfill.io/v3/polyfill.min.js?features=default"></script>
+    <script defer src="https://code.jquery.com/jquery-3.6.4.min.js" integrity="sha256-oP6HI9z1XaZNBrJURtCoUT5SUnxFr8s3BzRl+cbzUq8=" crossorigin="anonymous"></script>
 </head>
 
 <body id="page-top" data-bs-spy="scroll" data-bs-target="#mainNav" data-bs-offset="54">
@@ -358,7 +360,11 @@
             <div id="rat-calendar" class="row">
                 <div class="col-lg-12 text-center">
                     <div class="calendar-size" style="margin: auto;">
-                        <div id="calendar"></div>
+                        {% if user.is_authenticated %}
+                            <div id="calendar-admins"></div>
+                        {% else %}
+                            <div id="calendar"></div>
+                        {% endif %}
                     </div>
                 </div>
             </div>
@@ -372,6 +378,20 @@
                     <h3 class="text-muted section-subheading">About the nearby Area</h3>
                     <div>
                         <p><br><span style="color: rgb(0, 0, 0);">Around Sainte Ambroix:Sainte Ambroix river beach (5 minutes walk) https://www.saint-ambroix.fr/decouvrir-bouger/situation-geographique/la-ceze</span><br><span style="color: rgb(0, 0, 0);">Les Chevaux au Cantaure – horse riding - https://www.leschevauxducantaure.com</span><br><span style="color: rgb(0, 0, 0);">Prehistorama – Museum of the prehistoric era - http://www.prehistorama.com</span><br><span style="color: rgb(0, 0, 0);">Cap Canoe – canoe hire – https://capcanoe.fr</span><br><span style="color: rgb(0, 0, 0);">Acrobranche Indy Parc– Treetop rope advanture park - https://www.indy-parc.com</span><br><span style="color: rgb(0, 0, 0);">Grotte de la Cocalière (10 minutes) https://www.grotte-cocaliere.com/en/</span><br><span style="color: rgb(0, 0, 0);">Further afield:</span><br><span style="color: rgb(0, 0, 0);">Chateau de Montalet (10 minutes) – 12th century castle, partly ruined with staterooms now restored. https://clnunez13.wordpress.com</span><br><span style="color: rgb(0, 0, 0);">Les Petites Aiguieres / Les Grande Aiguieres – (15 Minutes) water-carved rock formations, with beautiful blue pools and waterfalls. https://www.theadventuredogs.com/gard/les-petites-aiguieres-avec-son-chien/ </span><br><span style="color: rgb(0, 0, 0);">Grotte de la Salamandre (20 minutes) - https://www.grottedelasalamandre.com/fr/</span><br><span style="color: rgb(0, 0, 0);">Barjac (20 minutes) – lovely old village - https://www.francethisway.com/places/barjac.php</span><br><span style="color: rgb(0, 0, 0);">Lussan (25 minutes) – village of character with 2 ruined castles - https://www.francethisway.com/places/lussan.php</span><br><span style="color: rgb(0, 0, 0);">Labastide de Virac (25 minutes) – Chateau des Roure, medieval castle with living museum www.chateaudesroure.com</span><br><span style="color: rgb(0, 0, 0);">Montclus (30 minutes) –Montclus is a tiny beautiful village and great place for walkers - https://www.francethisway.com/places/montclus.php</span><br><span style="color: rgb(0, 0, 0);">Pont D’Arc (30 minutes) – a huge, natural rock arch on the Ardèche river - https://www.francethisway.com/places/pontdarc.php</span><br><span style="color: rgb(0, 0, 0);">Vallon Pont D’Arc (30 minutes) – Starting point for many companies offering canoeing adventures - https://www.france-voyage.com/cities-towns/vallon-pont-d-arc-29653.htm</span><br><span style="color: rgb(0, 0, 0);">Yumping (en.yumping.fr) (30 minutes) – High ropes adventure.</span><br><span style="color: rgb(0, 0, 0);">Dinopedia Parc (30 minutes) – www.dinopedia-parc.fr</span><br><span style="color: rgb(0, 0, 0);">Uzès (40 minutes) – https://www.france-voyage.com/tourism/uzes-1420.html</span><br><span style="color: rgb(0, 0, 0);">Haribo museum – accueil.musee@haribo.com</span><br><span style="color: rgb(0, 0, 0);">Sainte Martin d’Ardeche (45 minutes) – Like the Pont D’Arc in miniature - https://www.francethisway.com/places/a/saint-martin-d-ardeche-ardeche.php</span><br><span style="color: rgb(0, 0, 0);">Pont du Gard (50 minutes) – UNESCO World Heritage Site and perhaps one of the most famous roman aqueducts in the world - https://pontdugard.fr/en</span><br><span style="color: rgb(0, 0, 0);">Villefort (lake) (55 minutes) – Climbing, caving and watersports. www.grandeurnature.48.com https://www.france-voyage.com/cities-towns/villefort-16898.htm</span><br><span style="color: rgb(0, 0, 0);">Nines (60 minutes) – Important outpost of the Roman empire, many well preserved Roman monuments including an Amphitheatre - https://www.francethisway.com/places/nimes.php</span><br><span style="color: rgb(0, 0, 0);">Orange (70 minutes) – has spectacular Roman amphitheater – UNESCO World Heritage Site - https://www.francethisway.com/places/orange.php</span><br><span style="color: rgb(0, 0, 0);">Avignon (80 minutes) – UNESCO World Heritage Site – Palais des Papes and the famous bridge and walled city - https://www.avignon-et-provence.com/en/tourism-provence/avignon</span><br><br></p>
+                        <div style="display: none">
+                            <input
+                                id="pac-input"
+                                class="controls"
+                                type="text"
+                                placeholder="Enter a location"
+                            />
+                        </div>
+                        <div id="map"></div>
+                        <div id="infowindow-content">
+                            <span id="place-name" class="title"></span><br />
+                            <strong>Place ID:</strong> <span id="place-id"></span><br />
+                            <span id="place-address"></span>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -747,6 +767,8 @@
         </div>
     </div>
 
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/fullcalendar@6.1.8/index.global.min.js"></script>
     <script src="{{ url_for('static', filename='bootstrap/js/bootstrap.min.js   ') }}"></script>
     <script src="{{ url_for('static', filename='js/bs-init.js') }}"></script>
     <script src="{{ url_for('static', filename='js/agency.js') }}"></script>
@@ -755,8 +777,9 @@
     <script src="{{ url_for('static', filename='js/Lightbox-Gallery-baguetteBox.min.js') }}"></script>
     <script src="{{ url_for('static', filename='js/Lightbox-Gallery.js') }}"></script>
     <script src="{{ url_for('static', filename='js/star-rating.js') }}"></script>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/fullcalendar@6.1.8/index.global.min.js"></script>
+    <script src="{{ url_for('static', filename='js/google-maps.js') }}"></script>
+    <script async defer src="http://maps.googleapis.com/maps/api/js?key=AIzaSyDloLlGpUlhHz3fiKCr46CoL6usoR91kRY&libraries=places&v=3&sensor=False&callback=initMap"></script>
+
 </body>
 
 </html>
