New images and lang files

--- a/website/templates/en.html
+++ b/website/templates/en.html
@@ -1,6 +1,6 @@
 {% extends "index.html" %}
 
-{% block lan_cur %}fr{% endblock %}
+{% block lan_cur %}en{% endblock %}
 
 {% block nav_acc %}
     Accomodation
@@ -19,20 +19,20 @@
 {% endblock %}
 
 {% block welcome %}
-    Welcome to France!
+    Welcome to
 {% endblock %}
 
 {% block acc_tit %}
     Accomodation
 {% endblock %}
 {% block acc_des %}
-    Welcome to our exquisite villa perched above the Cez river on the outskirts of Sainte Ambroix in the Gard. Just minutes from the extensive amenities of the town and within easy distance of three world heritage sites and other historic attractions, this luxurious retreat offers uninterrupted views across the valley. With its timeless blend of elegance and modern comfort, it promises an unforgettable holiday for families, friends or couples seeking a secluded romantic getaway.
+    Welcome to our exquisite villa perched above the Cez river on the outskirts of Saint Ambroix in the department of the Gard. Just minutes from the extensive amenities of the town and within easy distance of three world heritage sites and other historic attractions, this luxurious retreat offers uninterrupted views across the valley. With its timeless blend of elegance and modern comfort, it promises an unforgettable holiday for families, friends or couples seeking a secluded romantic getaway.
 {% endblock %}
 {% block acc_sl1_tit %}
     Exterior and Surroundings
 {% endblock %}
 {% block acc_sl1_des %}
-    As you arrive at the villa, you'll be captivated by the stunning stone facade adorned with blooming bougainvillea, exuding rustic romance. Surrounded by lush gardens, fragrant lavender fields, and ancient olive groves, the property offers a serene ambiance and breathtaking views of the Provençal countryside. Enjoy mornings on the terrace and evenings witnessing mesmerizing sunsets.
+    As you arrive at the villa, you will be captivated by the stunning stone facade with blooming bougainvillea and wisteria exuding rustic charm. Surrounded by a garden that remains green all summer with olive trees, lilac and fragrant rosemary, the property offers a serene ambiance and breathtaking views of the Cevennes countryside. Enjoy lazy mornings on the terrace and evenings of mesmerizing sunsets.
 {% endblock %}
 {% block acc_sl2_tit %}
     Indoor Living Spaces
@@ -41,7 +41,7 @@
     Step inside the villa to find a seamless blend of traditional French architecture and contemporary design. Elegant furnishings, white, high-beamed ceilings and stone floors create a calm and relaxing atmosphere. The spacious main living room has windows on two sides that bathe the space in natural light and showcase spectacular views, whilst electric shutters shut out the heat of the day. A stylish kitchen is equipped with everything needed to prepare delicious meals from local ingredients and leads through to a second tranquil living room with a log burner for cooler autumn evenings.
 {% endblock %}
 {% block acc_sl3_tit %}
-    Bedrooms and Suites
+    Bedrooms
 {% endblock %}
 {% block acc_sl3_des %}
     Comfortably accommodating eight guests in three doubles and one twin room, each bedroom is elegantly and individually styled to suit the age of the property, with cool cotton bed linen and towels adding further touches of luxury. Thought has been given to keeping youngsters safe and amused in the early mornings, with the large first floor landing equipped with TV, Xbox, DVDs and games. There is a family bathroom with shower and a separate toilet on the first floor, and a ground floor shower room with toilet that is easily accessible from the pool area.
@@ -50,7 +50,7 @@
     Outdoor Delights
 {% endblock %}
 {% block acc_sl4_des %}
-    The large pool area surrounded by olive trees is perfectly designed and equipped for fun, relaxing and eating outside. After barbequing by the pool you and your guests can eat comfortably together under the wisteria edged canopy, before sunbathing or relaxing in the shaded poolside lounge area. A second, but connected, covered terrace offers space for table tennis and board games whilst protected from the sun. Bounded by a disused railway line and wooded hillside to the rear, the villa, pool and garden cannot be overlooked.
+    The large pool area surrounded by olive trees is perfectly designed and equipped for fun, relaxing and eating outside. After barbequing by the pool you can eat comfortably under the wisteria edged canopy, before sunbathing or relaxing in the shaded poolside lounge area. A second, but connected, covered terrace offers space for table tennis and board games whilst protected from the sun. Bounded by a disused railway line and wooded hillside to the rear, the villa, pool and garden cannot be overlooked.
 {% endblock %}
 {% block acc_sli_nex %}
     Next
@@ -76,22 +76,22 @@
     Free Wifi
 {% endblock %}
 {% block acc_inf_sml_swi %}
-    Swimming Pool
+    Swimming pool
 {% endblock %}
 {% block acc_inf_sml_kit %}
     Kitchen
 {% endblock %}
 {% block acc_inf_sml_was %}
-    Washing Machine
+    Washing machine
 {% endblock %}
 {% block acc_inf_sml_pet %}
-    Pets Welcome
+    Pets welcome
 {% endblock %}
 {% block acc_inf_sml_chi %}
-    Child Friendly
+    Child friendly
 {% endblock %}
 {% block acc_inf_amn %}
-    Show all 50 Amenties
+    Show all 50 amenties
 {% endblock %}
 
 {% block acc_inf_inf_tit %}
@@ -106,7 +106,7 @@
     <br>
     Originally built as a stone barn and sympathetically converted and extended, it offers a mix of traditional and modern living spaces.<br>
     <br>
-    Stone Mas, stunning view in an elevated position at the very edge of the town, the house and grounds are not overlooked and have unbroken views along the river Ceze and across a wooded valley to the hills beyond, yet the property is only minutes from supermarkets and the full facilities of Sainte Ambroix - an historic, thriving medieval market town with many cafés and restaurants.<br>
+    With stunning views in an elevated position at the very edge of the town, the house and grounds are not overlooked and have unbroken views along the river Ceze and across a wooded valley to the hills beyond, yet the property is only minutes from supermarkets and the full facilities of Sainte Ambroix - an historic, thriving medieval market town with many cafés and restaurants. Teenagers and adults will be equally delighted that it is just five minutes walk down to a river beach and friendly bistro that cannot be seen or heard from the property <br>
     <br>
     Outside areas offer a variety of both sunny and shaded spaces to eat, relax or play: two large covered patios with dining tables, outdoor cooking area, 40m2 pool and additional poolside shaded seating area.<br>
     <br>
@@ -149,12 +149,12 @@
     This is changed per adult per night and is collected on site by cheque or cash (except airbnb)<br>
     <br>
     Cleaning:<br>
-    A compulsory "intermediate cleaning" fee of €200 is charged at the time of booking and corresponds to the disinfection and preparation of the house between two tenants.<br>
+    A compulsory "intermediate cleaning" fee of €250 is charged at the time of booking and corresponds to the disinfection and preparation of the house between two tenants.<br>
     <br>
     We ask our tenants to leave the house clean and tidy and as they found it when they leave (kitchen and sanitary facilities clean, fridge and cupboards emptied, bins emptied and recycling removed, etc.).<br>
     <br>
     Pets:<br>
-    Pets are accepted in the house but we will ask you to pay a pet fee (30€/animal/week) to cover the increased cleaning time required and ask owners to be careful not to leave dog poop in the garden to spoil the stay of subsequent guests.<br>
+    Pets are accepted in the house but we will ask you to pay a pet fee (30€/animal/week) to cover the increased cleaning time required and ask owners to be careful not to leave dog mess in the garden to spoil the stay of subsequent guests.<br>
     It must be advised prior to your stay that you are bringing a pet.<br>
     <br>
     Damage:<br>
@@ -162,65 +162,65 @@
     Our secure deposit system (Swikly) simply holds the amount on your credit card.
 {% endblock %}
 {% block acc_inf_inf_rea %}
-    Read More
+    Read more
 {% endblock %}
 {% block acc_inf_inf_hid %}
     Hide
 {% endblock %}
 
 {% block rat_tit %}
-    Rates &amp; Availability
+    Rates & availability
 {% endblock %}
 {% block rat_des %}
-    Information about the rates &amp; Availability
+    Information about the rates & availability
 {% endblock %}
 
 {% block rat_ear_tit %}
-    Early Season
+    Low season
 {% endblock %}
 {% block rat_ear_jan %}
-    January - March
-{% endblock %}
-{% block rat_ear_apr %}
     April
 {% endblock %}
+{% block rat_ear_apr %}
+    May
+{% endblock %}
 {% block rat_ear_may %}
-    May - June
+September
 {% endblock %}
 {% block rat_ear_rat %}
-    Rates Per Week
+    Rates per week
 {% endblock %}
 {% block rat_ear_jan_rat %}
-    €375
+    €1200 /  €1500
 {% endblock %}
 {% block rat_ear_apr_rat %}
-    €475
+€1200 /  €1500
 {% endblock %}
 {% block rat_ear_may_rat %}
-    €575
+€1200 /  €1500
 {% endblock %}
 
 {% block rat_hig_tit %}
-    High Season
+    Mid season
 {% endblock %}
 {% block rat_hig_jul %}
-    July - August
+    May - June
 {% endblock %}
 {% block rat_hig_rat %}
-    Rates Per Week
+    Rates per week
 {% endblock %}
 {% block rat_hig_jul_rat %}
-    €650
+    €1750
 {% endblock %}
 
 {% block rat_lat_tit %}
-    Late Season
+    High season
 {% endblock %}
 {% block rat_lat_sep %}
-    September
+   july
 {% endblock %}
 {% block rat_lat_oct %}
-    October
+August
 {% endblock %}
 {% block rat_lat_nov %}
     November
@@ -229,35 +229,36 @@
     December
 {% endblock %}
 {% block rat_lat_rat %}
-    Rates Per Week
+    Rates per week
 {% endblock %}
 {% block rat_lat_sep_rat %}
-    €575
+    €2350
 {% endblock %}
 {% block rat_lat_oct_rat %}
-    €475
+    €2350
 {% endblock %}
 {% block rat_lat_nov_rat %}
     €375
-{% endblock %}
+{% endblock %}    €2350
+
 {% block rat_lat_dec_rat %}
     €375
 {% endblock %}
 
 {% block are_tit %}
-    Our Area
+    Our area
 {% endblock %}
 {% block are_des %}
-    Explore the nearby area by choosing categories and clicking the map pins to see what they are!
+    Explore the nearby area by choosing categories and clicking the map pins to learn more
 {% endblock %}
 {% block are_his %}
-    Historical Sites
+    Historical sites
 {% endblock %}
 {% block are_act %}
     Activities
 {% endblock %}
 {% block are_sce %}
-    Scenery and Walks
+    Scenery and walks
 {% endblock %}
 {% block are_sho %}
     Shopping
@@ -285,10 +286,10 @@
     Departure (DD/MM/YY)
 {% endblock %}
 {% block res_pho %}
-    Phone Number
+    Phone number
 {% endblock %}
 {% block res_mes %}
-    Your Message *
+    Your message *
 {% endblock %}
 {% block res_sen %}
     SEND MESSAGE
@@ -337,10 +338,10 @@
     Pool
 {% endblock %}
 {% block amn_poo_swi %}
-    Swimming Pool
+    Swimming pool
 {% endblock %}
 {% block amn_poo_pri %}
-    Private Pool
+    Private pool
 {% endblock %}
 
 {% block amn_gen %}
@@ -350,19 +351,19 @@
     Free Wifi
 {% endblock %}
 {% block amn_gen_was %}
-    Washing Machine
+    Washing machine
 {% endblock %}
 {% block amn_gen_wir %}
-    Wireless
+    Radio
 {% endblock %}
 {% block amn_gen_fir %}
     Fireplace
 {% endblock %}
 {% block amn_gen_che %}
-    24-hour Check-in
+    In person check-in
 {% endblock %}
 {% block amn_gen_hai %}
-    Hair Dryer
+    Hair dryer
 {% endblock %}
 {% block amn_gen_han %}
     Hangers
@@ -371,35 +372,35 @@
     Iron
 {% endblock %}
 {% block amn_gen_lap %}
-    Laptop Friendly Workspaces
+    Laptop friendly workspaces
 {% endblock %}
 {% block amn_gen_tv %}
     TV
 {% endblock %}
 {% block amn_gen_gri %}
-    Outdoor Grill
+    Outdoor gril / BBQ
 {% endblock %}
 {% block amn_gen_gar %}
     Garden
 {% endblock %}
 {% block amn_gen_hot %}
-    Hot Water
+    Hot water
 {% endblock %}
 {% block amn_gen_ent %}
-    Private Entrance
+    Private entrance
 {% endblock %}
 {% block amn_gen_coo %}
-    Cooking Basics
+    Cooking basics
 {% endblock %}
 
 {% block amn_kit %}
-    Kitchen &amp; Dining
+    Kitchen & Dining
 {% endblock %}
 {% block amn_kit_kit %}
     Kitchen
 {% endblock %}
 {% block amn_kit_toa %}
-    Toaster
+   Wine fridge
 {% endblock %}
 {% block amn_kit_dis %}
     Dishwasher
@@ -411,10 +412,10 @@
     Oven
 {% endblock %}
 {% block amn_kit_ket %}
-    Electric Kettle
+    Electric kettle
 {% endblock %}
 {% block amn_kit_cof %}
-    Coffee/Tea Maker
+    Coffee/Tea maker
 {% endblock %}
 {% block amn_kit_sto %}
     Stove
@@ -423,19 +424,19 @@
     Refrigerator
 {% endblock %}
 {% block amn_kit_hig %}
-    High Chair
+    High chair
 {% endblock %}
 {% block amn_kit_ute %}
-    Kitchen Utensils
+    Kitchen utensils
 {% endblock %}
 {% block amn_kit_din %}
-    Dining Area
+    Dining area
 {% endblock %}
 {% block amn_kit_tab %}
-    Dining Table
+    Dining table
 {% endblock %}
 {% block amn_kit_bar %}
-    Barbeque Utensils
+    Barbeque utensils
 {% endblock %}
 {% block amn_kit_ble %}
     Blender
@@ -444,46 +445,46 @@
     Freezer
 {% endblock %}
 {% block amn_kit_win %}
-    Wine Glasses
+    Wine glasses
 {% endblock %}
 
 {% block amn_pol %}
     Policy
 {% endblock %}
 {% block amn_pol_pet %}
-    Pets Allowed
+    Pets allowed
 {% endblock %}
 {% block amn_pol_chi %}
-    Suitable for Children
+    Suitable for children
 {% endblock %}
 {% block amn_pol_inf %}
-    Suitable for Infants
+    Suitable for infants
 {% endblock %}
 
 {% block amn_saf %}
     Safety
 {% endblock %}
 {% block amn_saf_smo %}
-    Smoke Detector
+    Smoke detector
 {% endblock %}
 {% block amn_saf_car %}
-    Carbon Monoxide Detector
+    Carbon monoxide detector
 {% endblock %}
 {% block amn_saf_aid %}
-    First Aid Kit
+    First aid kit
 {% endblock %}
 {% block amn_saf_fir %}
-    Fire Extinguisher
+    Fire extinguisher
 {% endblock %}
 
 {% block amn_car %}
     Parking / Car
 {% endblock %}
 {% block amn_car_par %}
-    Free Parking
+    Free parking
 {% endblock %}
 {% block amn_car_nec %}
-    Car Necessary
+    Car necessary
 {% endblock %}
 
 {% block amn_ent %}
@@ -496,39 +497,39 @@
     DVDs
 {% endblock %}
 {% block amn_ent_pin %}
-    Ping Pong Table
+    Table tennis table
 {% endblock %}
 {% block amn_ent_vid %}
-    Video Games
+    Video games
 {% endblock %}
 {% block amn_ent_boa %}
-    Board Games
+    Board games
 {% endblock %}
 
 {% block amn_cle %}
     Cleanliness
 {% endblock %}
 {% block amn_cle_enh %}
-    Enhanced Cleaning Practices
+    Enhanced cleaning practices
 {% endblock %}
 {% block amn_cle_cle %}
     Cleaning
 {% endblock %}
 
 {% block rev_tit %}
-    Leave a Review
+    Leave a review
 {% endblock %}
 {% block rev_tit_tit %}
-    Review Title
+    Review title
 {% endblock %}
 {% block rev_nam %}
-    Your Name
+    Your name
 {% endblock %}
 {% block rev_ema %}
-    Your Email
+    Your email
 {% endblock %}
 {% block rev_mes %}
-    Review Message
+    Review message
 {% endblock %}
 {% block rev_clo %}
     Close
@@ -552,11 +553,3 @@
 {% block por_sub %}
     Submit
 {% endblock %}
-
-
-
-
-
-
-
-
