--- a/website/templates/index.html
+++ b/website/templates/index.html
@@ -67,7 +67,7 @@
         {% endwith %}
     </div>
     <header class="masthead">
-        <div data-bss-parallax-bg="true" style="height: 700px;display: block;width: auto;background: url(&quot;../static/img/pic1.jpeg&quot;);background-size: auto;">
+        <div data-bss-parallax-bg="true" style="height: 700px;display: block;width: auto;background: url(&quot;../static/img/header.jpg&quot;);background-size: auto;">
             <div class="container">
                 <div class="intro-text">
                     <div class="welcome-text-bg">
@@ -90,7 +90,8 @@
                 <div class="col-lg-12 text-center">
                     <div class="carousel slide" data-bs-ride="carousel" data-bs-interval="15000" id="carousel-1" style="height: 600px;">
                         <div class="carousel-inner h-100">
-                            <div class="carousel-item active h-100"><img class="w-100 d-block position-absolute h-100 fit-cover" src="{{ url_for('static', filename='img/pic21.jpeg') }}" alt="Slide Image" style="z-index: -1;">
+                            <div class="carousel-item active h-100">
+                                <img class="w-100 d-block position-absolute h-100 fit-cover" src="{{ url_for('static', filename='img/exterior.jpg') }}" alt="Slide Image" style="z-index: -1;">
                                 <div class="container d-flex flex-column justify-content-center h-100">
                                     <div class="row">
                                         <div class="col-md-6 col-xl-4 offset-md-2">
@@ -102,7 +103,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="carousel-item h-100"><img class="w-100 d-block position-absolute h-100 fit-cover" src="{{ url_for('static', filename='img/pic11.jpeg') }}" alt="Slide Image" style="z-index: -1;">
+                            <div class="carousel-item h-100"><img class="w-100 d-block position-absolute h-100 fit-cover" src="{{ url_for('static', filename='img/indoor.jpg') }}" alt="Slide Image" style="z-index: -1;">
                                 <div class="container d-flex flex-column justify-content-center h-100">
                                     <div class="row">
                                         <div class="col-md-6 col-xl-4 offset-md-2">
@@ -114,7 +115,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="carousel-item h-100"><img class="w-100 d-block position-absolute h-100 fit-cover" src="{{ url_for('static', filename='img/pic14.jpeg') }}" alt="Slide Image" style="z-index: -1;">
+                            <div class="carousel-item h-100"><img class="w-100 d-block position-absolute h-100 fit-cover" src="{{ url_for('static', filename='img/bedroom.jpeg') }}" alt="Slide Image" style="z-index: -1;">
                                 <div class="container d-flex flex-column justify-content-center h-100">
                                     <div class="row">
                                         <div class="col-md-6 col-xl-4 offset-md-2">
@@ -126,7 +127,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="carousel-item h-100"><img class="w-100 d-block position-absolute h-100 fit-cover" src="{{ url_for('static', filename='img/pic2.jpeg') }}" alt="Slide Image" style="z-index: -1;">
+                            <div class="carousel-item h-100"><img class="w-100 d-block position-absolute h-100 fit-cover" src="{{ url_for('static', filename='img/outdoor.jpg') }}" alt="Slide Image" style="z-index: -1;">
                                 <div class="container d-flex flex-column justify-content-center h-100">
                                     <div class="row">
                                         <div class="col-md-6 col-xl-4 offset-md-2">
@@ -220,66 +221,88 @@
                                     <div class="carousel-item active h-100">
                                         <div class="row gx-4 gy-3 row-cols-1 row-cols-md-2 row-cols-xl-3 photos" data-bss-baguettebox="">
                                             <div class="col item">
-                                                <div class="gallery-image-holder"><a href="{{ url_for('static', filename='mg/pic10.jpeg') }}"><img class="gallery-image-2" src="{{ url_for('static', filename='img/pic10.jpeg') }}"></a></div>
+                                                <div class="gallery-image-holder"><a href="{{ url_for('static', filename='mg/Pic1.jpeg') }}"><img class="gallery-image-2" src="{{ url_for('static', filename='img/pic10.jpeg') }}"></a></div>
                                             </div>
                                             <div class="col item">
-                                                <div class="gallery-image-holder"><a href="{{ url_for('static', filename='img/pic12.jpeg') }}"><img class="gallery-image" src="{{ url_for('static', filename='img/pic12.jpeg') }}"></a></div>
+                                                <div class="gallery-image-holder"><a href="{{ url_for('static', filename='img/Pic2.jpeg') }}"><img class="gallery-image" src="{{ url_for('static', filename='img/pic12.jpeg') }}"></a></div>
                                             </div>
                                             <div class="col item">
-                                                <div class="gallery-image-holder"><a href="{{ url_for('static', filename='img/pic13.jpeg') }}"><img class="gallery-image" src="{{ url_for('static', filename='img/pic13.jpeg') }}"></a></div>
+                                                <div class="gallery-image-holder"><a href="{{ url_for('static', filename='img/Pic3.jpeg') }}"><img class="gallery-image" src="{{ url_for('static', filename='img/pic13.jpeg') }}"></a></div>
                                             </div>
                                             <div class="col item">
-                                                <div class="gallery-image-holder"><a href="{{ url_for('static', filename='img/pic15.jpeg') }}"><img class="gallery-image-2" src="{{ url_for('static', filename='img/pic15.jpeg') }}"></a></div>
+                                                <div class="gallery-image-holder"><a href="{{ url_for('static', filename='img/Pic4.jpeg') }}"><img class="gallery-image-2" src="{{ url_for('static', filename='img/pic15.jpeg') }}"></a></div>
                                             </div>
                                             <div class="col item">
-                                                <div class="gallery-image-holder"><a href="{{ url_for('static', filename='img/pic16.jpeg') }}"><img class="gallery-image-2" src="{{ url_for('static', filename='img/pic16.jpeg') }}"></a></div>
+                                                <div class="gallery-image-holder"><a href="{{ url_for('static', filename='img/Pic5.jpeg') }}"><img class="gallery-image-2" src="{{ url_for('static', filename='img/pic16.jpeg') }}"></a></div>
                                             </div>
                                             <div class="col item">
-                                                <div class="gallery-image-holder"><a href="{{ url_for('static', filename='img/pic18.jpeg') }}"><img class="gallery-image-2" src="{{ url_for('static', filename='img/pic18.jpeg') }}"></a></div>
-                                            </div>
-                                        </div>
-                                    </div>
-                                    <div class="carousel-item h-100">
-                                        <div class="row gx-2 gy-2 row-cols-1 row-cols-md-2 row-cols-xl-3 photos" data-bss-baguettebox="">
-                                            <div class="col item">
-                                                <div class="gallery-image-holder"><a href="{{ url_for('static', filename='img/pic19.jpeg') }}"><img class="gallery-image-2" src="{{ url_for('static', filename='img/pic19.jpeg') }}"></a></div>
-                                            </div>
-                                            <div class="col item">
-                                                <div class="gallery-image-holder"><a href="{{ url_for('static', filename='img/pic4.jpeg') }}"><img class="gallery-image" src="{{ url_for('static', filename='img/pic4.jpeg') }}"></a></div>
-                                            </div>
-                                            <div class="col item">
-                                                <div class="gallery-image-holder"><a href="{{ url_for('static', filename='img/pic20.jpeg') }}"><img class="gallery-image" src="{{ url_for('static', filename='img/pic20.jpeg') }}"></a></div>
-                                            </div>
-                                            <div class="col item">
-                                                <div class="gallery-image-holder"><a href="{{ url_for('static', filename='img/pic22.jpeg') }}"><img class="gallery-image-2" src="{{ url_for('static', filename='img/pic22.jpeg') }}"></a></div>
-                                            </div>
-                                            <div class="col item">
-                                                <div class="gallery-image-holder"><a href="{{ url_for('static', filename='img/pic5.jpeg') }}"><img class="gallery-image-2" src="{{ url_for('static', filename='img/pic5.jpeg') }}"></a></div>
-                                            </div>
-                                            <div class="col item">
-                                                <div class="gallery-image-holder"><a href="{{ url_for('static', filename='img/pic6.jpeg') }}"><img class="gallery-image" src="{{ url_for('static', filename='img/pic6.jpeg') }}"></a></div>
+                                                <div class="gallery-image-holder"><a href="{{ url_for('static', filename='img/Pic6.jpeg') }}"><img class="gallery-image-2" src="{{ url_for('static', filename='img/pic18.jpeg') }}"></a></div>
                                             </div>
                                         </div>
                                     </div>
                                     <div class="carousel-item h-100">
                                         <div class="row gx-2 gy-2 row-cols-1 row-cols-md-2 row-cols-xl-3 photos" data-bss-baguettebox="">
                                             <div class="col item">
-                                                <div class="gallery-image-holder"><a href="{{ url_for('static', filename='img/pic7.jpeg') }}"><img class="gallery-image-2" src="{{ url_for('static', filename='img/pic7.jpeg') }}"></a></div>
+                                                <div class="gallery-image-holder"><a href="{{ url_for('static', filename='img/Pic7.jpeg') }}"><img class="gallery-image-2" src="{{ url_for('static', filename='img/pic19.jpeg') }}"></a></div>
                                             </div>
                                             <div class="col item">
-                                                <div class="gallery-image-holder"><a href="{{ url_for('static', filename='img/pic8.jpeg') }}"><img class="gallery-image-2" src="{{ url_for('static', filename='img/pic8.jpeg') }}"></a></div>
+                                                <div class="gallery-image-holder"><a href="{{ url_for('static', filename='img/Pic8.jpeg') }}"><img class="gallery-image" src="{{ url_for('static', filename='img/pic4.jpeg') }}"></a></div>
                                             </div>
                                             <div class="col item">
-                                                <div class="gallery-image-holder"><a href="{{ url_for('static', filename='img/pic9.jpeg') }}"><img class="gallery-image-2" src="{{ url_for('static', filename='img/pic9.jpeg') }}"></a></div>
+                                                <div class="gallery-image-holder"><a href="{{ url_for('static', filename='img/Pic9.jpeg') }}"><img class="gallery-image" src="{{ url_for('static', filename='img/pic20.jpeg') }}"></a></div>
                                             </div>
                                             <div class="col item">
-                                                <div class="gallery-image-holder"><a href="{{ url_for('static', filename='img/pic1.jpeg') }}"><img class="gallery-image" src="{{ url_for('static', filename='img/pic1.jpeg') }}"></a></div>
+                                                <div class="gallery-image-holder"><a href="{{ url_for('static', filename='img/Pic10.jpeg') }}"><img class="gallery-image-2" src="{{ url_for('static', filename='img/pic22.jpeg') }}"></a></div>
                                             </div>
                                             <div class="col item">
-                                                <div class="gallery-image-holder"><a href="{{ url_for('static', filename='img/pic11.jpeg') }}"><img class="gallery-image" src="{{ url_for('static', filename='img/pic11.jpeg') }}"></a></div>
+                                                <div class="gallery-image-holder"><a href="{{ url_for('static', filename='img/Pic11.jpeg') }}"><img class="gallery-image-2" src="{{ url_for('static', filename='img/pic5.jpeg') }}"></a></div>
                                             </div>
                                             <div class="col item">
-                                                <div class="gallery-image-holder"><a href="{{ url_for('static', filename='img/pic2.jpeg') }}"><img class="gallery-image-2" src="{{ url_for('static', filename='img/pic2.jpeg') }}"></a></div>
+                                                <div class="gallery-image-holder"><a href="{{ url_for('static', filename='img/Pic12.jpeg') }}"><img class="gallery-image" src="{{ url_for('static', filename='img/pic6.jpeg') }}"></a></div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="carousel-item h-100">
+                                        <div class="row gx-2 gy-2 row-cols-1 row-cols-md-2 row-cols-xl-3 photos" data-bss-baguettebox="">
+                                            <div class="col item">
+                                                <div class="gallery-image-holder"><a href="{{ url_for('static', filename='img/Pic13.jpeg') }}"><img class="gallery-image-2" src="{{ url_for('static', filename='img/pic7.jpeg') }}"></a></div>
+                                            </div>
+                                            <div class="col item">
+                                                <div class="gallery-image-holder"><a href="{{ url_for('static', filename='img/Pic14.jpeg') }}"><img class="gallery-image-2" src="{{ url_for('static', filename='img/pic8.jpeg') }}"></a></div>
+                                            </div>
+                                            <div class="col item">
+                                                <div class="gallery-image-holder"><a href="{{ url_for('static', filename='img/Pic15.jpeg') }}"><img class="gallery-image-2" src="{{ url_for('static', filename='img/pic9.jpeg') }}"></a></div>
+                                            </div>
+                                            <div class="col item">
+                                                <div class="gallery-image-holder"><a href="{{ url_for('static', filename='img/Pic16.jpeg') }}"><img class="gallery-image" src="{{ url_for('static', filename='img/pic1.jpeg') }}"></a></div>
+                                            </div>
+                                            <div class="col item">
+                                                <div class="gallery-image-holder"><a href="{{ url_for('static', filename='img/Pic17.jpeg') }}"><img class="gallery-image" src="{{ url_for('static', filename='img/pic11.jpeg') }}"></a></div>
+                                            </div>
+                                            <div class="col item">
+                                                <div class="gallery-image-holder"><a href="{{ url_for('static', filename='img/Pic18.jpeg') }}"><img class="gallery-image-2" src="{{ url_for('static', filename='img/pic2.jpeg') }}"></a></div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="carousel-item h-100">
+                                        <div class="row gx-2 gy-2 row-cols-1 row-cols-md-2 row-cols-xl-3 photos" data-bss-baguettebox="">
+                                            <div class="col item">
+                                                <div class="gallery-image-holder"><a href="{{ url_for('static', filename='img/Pic19.jpeg') }}"><img class="gallery-image-2" src="{{ url_for('static', filename='img/pic7.jpeg') }}"></a></div>
+                                            </div>
+                                            <div class="col item">
+                                                <div class="gallery-image-holder"><a href="{{ url_for('static', filename='img/Pic20.jpeg') }}"><img class="gallery-image-2" src="{{ url_for('static', filename='img/pic8.jpeg') }}"></a></div>
+                                            </div>
+                                            <div class="col item">
+                                                <div class="gallery-image-holder"><a href="{{ url_for('static', filename='img/Pic21.jpeg') }}"><img class="gallery-image-2" src="{{ url_for('static', filename='img/pic9.jpeg') }}"></a></div>
+                                            </div>
+                                            <div class="col item">
+                                                <div class="gallery-image-holder"><a href="{{ url_for('static', filename='img/Pic22.jpeg') }}"><img class="gallery-image" src="{{ url_for('static', filename='img/pic1.jpeg') }}"></a></div>
+                                            </div>
+                                            <div class="col item">
+                                                <div class="gallery-image-holder"><a href="{{ url_for('static', filename='img/Pic23.jpeg') }}"><img class="gallery-image" src="{{ url_for('static', filename='img/pic11.jpeg') }}"></a></div>
+                                            </div>
+                                            <div class="col item">
+                                                <div class="gallery-image-holder"><a href="{{ url_for('static', filename='img/Pic24.jpeg') }}"><img class="gallery-image-2" src="{{ url_for('static', filename='img/pic2.jpeg') }}"></a></div>
                                             </div>
                                         </div>
                                     </div>
