New images and lang files

--- a/website/templates/index.html
+++ b/website/templates/index.html
@@ -221,22 +221,22 @@
                                     <div class="carousel-item active h-100">
                                         <div class="row gx-4 gy-3 row-cols-1 row-cols-md-2 row-cols-xl-3 photos" data-bss-baguettebox="">
                                             <div class="col item">
-                                                <div class="gallery-image-holder"><a href="{{ url_for('static', filename='mg/Pic1.jpeg') }}"><img class="gallery-image-2" src="{{ url_for('static', filename='img/pic10.jpeg') }}"></a></div>
+                                                <div class="gallery-image-holder"><a href="{{ url_for('static', filename='mg/Pic1.jpg') }}"><img class="gallery-image-2" src="{{ url_for('static', filename='img/pic10.jpeg') }}"></a></div>
                                             </div>
                                             <div class="col item">
-                                                <div class="gallery-image-holder"><a href="{{ url_for('static', filename='img/Pic2.jpeg') }}"><img class="gallery-image" src="{{ url_for('static', filename='img/pic12.jpeg') }}"></a></div>
+                                                <div class="gallery-image-holder"><a href="{{ url_for('static', filename='img/Pic2.jpg') }}"><img class="gallery-image" src="{{ url_for('static', filename='img/pic12.jpeg') }}"></a></div>
                                             </div>
                                             <div class="col item">
-                                                <div class="gallery-image-holder"><a href="{{ url_for('static', filename='img/Pic3.jpeg') }}"><img class="gallery-image" src="{{ url_for('static', filename='img/pic13.jpeg') }}"></a></div>
+                                                <div class="gallery-image-holder"><a href="{{ url_for('static', filename='img/Pic3.jpg') }}"><img class="gallery-image" src="{{ url_for('static', filename='img/pic13.jpeg') }}"></a></div>
                                             </div>
                                             <div class="col item">
-                                                <div class="gallery-image-holder"><a href="{{ url_for('static', filename='img/Pic4.jpeg') }}"><img class="gallery-image-2" src="{{ url_for('static', filename='img/pic15.jpeg') }}"></a></div>
+                                                <div class="gallery-image-holder"><a href="{{ url_for('static', filename='img/Pic4.jpg') }}"><img class="gallery-image-2" src="{{ url_for('static', filename='img/pic15.jpeg') }}"></a></div>
                                             </div>
                                             <div class="col item">
-                                                <div class="gallery-image-holder"><a href="{{ url_for('static', filename='img/Pic5.jpeg') }}"><img class="gallery-image-2" src="{{ url_for('static', filename='img/pic16.jpeg') }}"></a></div>
+                                                <div class="gallery-image-holder"><a href="{{ url_for('static', filename='img/Pic5.jpg') }}"><img class="gallery-image-2" src="{{ url_for('static', filename='img/pic16.jpeg') }}"></a></div>
                                             </div>
                                             <div class="col item">
-                                                <div class="gallery-image-holder"><a href="{{ url_for('static', filename='img/Pic6.jpeg') }}"><img class="gallery-image-2" src="{{ url_for('static', filename='img/pic18.jpeg') }}"></a></div>
+                                                <div class="gallery-image-holder"><a href="{{ url_for('static', filename='img/Pic6.jpg') }}"><img class="gallery-image-2" src="{{ url_for('static', filename='img/pic18.jpeg') }}"></a></div>
                                             </div>
                                         </div>
                                     </div>
@@ -249,7 +249,7 @@
                                                 <div class="gallery-image-holder"><a href="{{ url_for('static', filename='img/Pic8.jpeg') }}"><img class="gallery-image" src="{{ url_for('static', filename='img/pic4.jpeg') }}"></a></div>
                                             </div>
                                             <div class="col item">
-                                                <div class="gallery-image-holder"><a href="{{ url_for('static', filename='img/Pic9.jpeg') }}"><img class="gallery-image" src="{{ url_for('static', filename='img/pic20.jpeg') }}"></a></div>
+                                                <div class="gallery-image-holder"><a href="{{ url_for('static', filename='img/Pic9.jpg') }}"><img class="gallery-image" src="{{ url_for('static', filename='img/pic20.jpeg') }}"></a></div>
                                             </div>
                                             <div class="col item">
                                                 <div class="gallery-image-holder"><a href="{{ url_for('static', filename='img/Pic10.jpeg') }}"><img class="gallery-image-2" src="{{ url_for('static', filename='img/pic22.jpeg') }}"></a></div>
@@ -258,57 +258,71 @@
                                                 <div class="gallery-image-holder"><a href="{{ url_for('static', filename='img/Pic11.jpeg') }}"><img class="gallery-image-2" src="{{ url_for('static', filename='img/pic5.jpeg') }}"></a></div>
                                             </div>
                                             <div class="col item">
-                                                <div class="gallery-image-holder"><a href="{{ url_for('static', filename='img/Pic12.jpeg') }}"><img class="gallery-image" src="{{ url_for('static', filename='img/pic6.jpeg') }}"></a></div>
+                                                <div class="gallery-image-holder"><a href="{{ url_for('static', filename='img/Pic12.jpg') }}"><img class="gallery-image" src="{{ url_for('static', filename='img/pic6.jpeg') }}"></a></div>
                                             </div>
                                         </div>
                                     </div>
                                     <div class="carousel-item h-100">
                                         <div class="row gx-2 gy-2 row-cols-1 row-cols-md-2 row-cols-xl-3 photos" data-bss-baguettebox="">
                                             <div class="col item">
-                                                <div class="gallery-image-holder"><a href="{{ url_for('static', filename='img/Pic13.jpeg') }}"><img class="gallery-image-2" src="{{ url_for('static', filename='img/pic7.jpeg') }}"></a></div>
+                                                <div class="gallery-image-holder"><a href="{{ url_for('static', filename='img/Pic13.jpg') }}"><img class="gallery-image-2" src="{{ url_for('static', filename='img/pic7.jpeg') }}"></a></div>
                                             </div>
                                             <div class="col item">
-                                                <div class="gallery-image-holder"><a href="{{ url_for('static', filename='img/Pic14.jpeg') }}"><img class="gallery-image-2" src="{{ url_for('static', filename='img/pic8.jpeg') }}"></a></div>
+                                                <div class="gallery-image-holder"><a href="{{ url_for('static', filename='img/Pic14.jpg') }}"><img class="gallery-image-2" src="{{ url_for('static', filename='img/pic8.jpeg') }}"></a></div>
                                             </div>
                                             <div class="col item">
-                                                <div class="gallery-image-holder"><a href="{{ url_for('static', filename='img/Pic15.jpeg') }}"><img class="gallery-image-2" src="{{ url_for('static', filename='img/pic9.jpeg') }}"></a></div>
+                                                <div class="gallery-image-holder"><a href="{{ url_for('static', filename='img/Pic15.jpg') }}"><img class="gallery-image-2" src="{{ url_for('static', filename='img/pic9.jpeg') }}"></a></div>
                                             </div>
                                             <div class="col item">
-                                                <div class="gallery-image-holder"><a href="{{ url_for('static', filename='img/Pic16.jpeg') }}"><img class="gallery-image" src="{{ url_for('static', filename='img/pic1.jpeg') }}"></a></div>
+                                                <div class="gallery-image-holder"><a href="{{ url_for('static', filename='img/Pic16.jpg') }}"><img class="gallery-image" src="{{ url_for('static', filename='img/pic1.jpeg') }}"></a></div>
                                             </div>
                                             <div class="col item">
-                                                <div class="gallery-image-holder"><a href="{{ url_for('static', filename='img/Pic17.jpeg') }}"><img class="gallery-image" src="{{ url_for('static', filename='img/pic11.jpeg') }}"></a></div>
+                                                <div class="gallery-image-holder"><a href="{{ url_for('static', filename='img/Pic17.jpg') }}"><img class="gallery-image" src="{{ url_for('static', filename='img/pic11.jpeg') }}"></a></div>
                                             </div>
                                             <div class="col item">
-                                                <div class="gallery-image-holder"><a href="{{ url_for('static', filename='img/Pic18.jpeg') }}"><img class="gallery-image-2" src="{{ url_for('static', filename='img/pic2.jpeg') }}"></a></div>
+                                                <div class="gallery-image-holder"><a href="{{ url_for('static', filename='img/Pic18.jpg') }}"><img class="gallery-image-2" src="{{ url_for('static', filename='img/pic2.jpeg') }}"></a></div>
                                             </div>
                                         </div>
                                     </div>
                                     <div class="carousel-item h-100">
                                         <div class="row gx-2 gy-2 row-cols-1 row-cols-md-2 row-cols-xl-3 photos" data-bss-baguettebox="">
                                             <div class="col item">
-                                                <div class="gallery-image-holder"><a href="{{ url_for('static', filename='img/Pic19.jpeg') }}"><img class="gallery-image-2" src="{{ url_for('static', filename='img/pic7.jpeg') }}"></a></div>
+                                                <div class="gallery-image-holder"><a href="{{ url_for('static', filename='img/Pic19.jpg') }}"><img class="gallery-image-2" src="{{ url_for('static', filename='img/pic7.jpeg') }}"></a></div>
                                             </div>
                                             <div class="col item">
-                                                <div class="gallery-image-holder"><a href="{{ url_for('static', filename='img/Pic20.jpeg') }}"><img class="gallery-image-2" src="{{ url_for('static', filename='img/pic8.jpeg') }}"></a></div>
+                                                <div class="gallery-image-holder"><a href="{{ url_for('static', filename='img/Pic20.jpg') }}"><img class="gallery-image-2" src="{{ url_for('static', filename='img/pic8.jpeg') }}"></a></div>
                                             </div>
                                             <div class="col item">
-                                                <div class="gallery-image-holder"><a href="{{ url_for('static', filename='img/Pic21.jpeg') }}"><img class="gallery-image-2" src="{{ url_for('static', filename='img/pic9.jpeg') }}"></a></div>
+                                                <div class="gallery-image-holder"><a href="{{ url_for('static', filename='img/Pic21.jpg') }}"><img class="gallery-image-2" src="{{ url_for('static', filename='img/pic9.jpeg') }}"></a></div>
                                             </div>
                                             <div class="col item">
-                                                <div class="gallery-image-holder"><a href="{{ url_for('static', filename='img/Pic22.jpeg') }}"><img class="gallery-image" src="{{ url_for('static', filename='img/pic1.jpeg') }}"></a></div>
+                                                <div class="gallery-image-holder"><a href="{{ url_for('static', filename='img/Pic22.jpg') }}"><img class="gallery-image" src="{{ url_for('static', filename='img/pic1.jpeg') }}"></a></div>
                                             </div>
                                             <div class="col item">
-                                                <div class="gallery-image-holder"><a href="{{ url_for('static', filename='img/Pic23.jpeg') }}"><img class="gallery-image" src="{{ url_for('static', filename='img/pic11.jpeg') }}"></a></div>
+                                                <div class="gallery-image-holder"><a href="{{ url_for('static', filename='img/Pic23.jpg') }}"><img class="gallery-image" src="{{ url_for('static', filename='img/pic11.jpeg') }}"></a></div>
                                             </div>
                                             <div class="col item">
-                                                <div class="gallery-image-holder"><a href="{{ url_for('static', filename='img/Pic24.jpeg') }}"><img class="gallery-image-2" src="{{ url_for('static', filename='img/pic2.jpeg') }}"></a></div>
+                                                <div class="gallery-image-holder"><a href="{{ url_for('static', filename='img/Pic24.jpg') }}"><img class="gallery-image-2" src="{{ url_for('static', filename='img/pic2.jpeg') }}"></a></div>
                                             </div>
                                         </div>
                                     </div>
                                 </div>
-                                <div><a class="carousel-control-prev" href="#carousel-2" role="button" data-bs-slide="prev"><span class="carousel-control-prev-icon dark-coloured"></span><span class="visually-hidden">Previous</span></a><a class="carousel-control-next" href="#carousel-2" role="button" data-bs-slide="next"><span class="carousel-control-next-icon"></span><span class="visually-hidden">Next</span></a></div>
-                                <div class="carousel-indicators"><button type="button" data-bs-target="#carousel-2" data-bs-slide-to="0" class="active"></button> <button type="button" data-bs-target="#carousel-2" data-bs-slide-to="1"></button> <button type="button" data-bs-target="#carousel-2" data-bs-slide-to="2"></button></div>
+                                <div>
+                                    <a class="carousel-control-prev" href="#carousel-2" role="button" data-bs-slide="prev">
+                                        <span class="carousel-control-prev-icon dark-coloured"></span>
+                                        <span class="visually-hidden">Previous</span>
+                                    </a>
+                                    <a class="carousel-control-next" href="#carousel-2" role="button" data-bs-slide="next">
+                                        <span class="carousel-control-next-icon"></span>
+                                        <span class="visually-hidden">Next</span>
+                                    </a>
+                                </div>
+                                <div class="carousel-indicators">
+                                    <button type="button" data-bs-target="#carousel-2" data-bs-slide-to="0" class="active"></button>
+                                    <button type="button" data-bs-target="#carousel-2" data-bs-slide-to="1"></button>
+                                    <button type="button" data-bs-target="#carousel-2" data-bs-slide-to="2"></button>
+                                    <button type="button" data-bs-target="#carousel-2" data-bs-slide-to="4"></button>
+                                </div>
                             </div>
                         </div>
                     </section>
