New images and lang files

--- a/website/templates/en.html
+++ b/website/templates/en.html
@@ -1,6 +1,6 @@
 {% extends "index.html" %}
 
-{% block lan_cur %}en{% endblock %}
+{% block lan_cur %}fr{% endblock %}
 
 {% block nav_acc %}
     Accomodation
@@ -175,74 +175,67 @@
     Information about the rates & availability
 {% endblock %}
 
-{% block rat_ear_tit %}
+{% block rat_low_tit %}
     Low season
 {% endblock %}
-{% block rat_ear_jan %}
+{% block rat_low_apr %}
     April
 {% endblock %}
-{% block rat_ear_apr %}
+{% block rat_low_may %}
     May
 {% endblock %}
-{% block rat_ear_may %}
-September
+{% block rat_low_sep %}
+    September
 {% endblock %}
-{% block rat_ear_rat %}
+{% block rat_low_rat %}
     Rates per week
 {% endblock %}
-{% block rat_ear_jan_rat %}
-    €1200 /  €1500
+{% block rat_low_apr_rat %}
+    €1500
 {% endblock %}
-{% block rat_ear_apr_rat %}
-€1200 /  €1500
+{% block rat_low_may_rat %}
+    €1500
 {% endblock %}
-{% block rat_ear_may_rat %}
-€1200 /  €1500
+{% block rat_low_sep_rat %}
+    €1500
+{% endblock %}
+
+{% block rat_mid_tit %}
+    Mid season
+{% endblock %}
+{% block rat_mid_jun %}
+    June
+{% endblock %}
+{% block rat_mid_sep %}
+    September
+{% endblock %}
+{% block rat_mid_rat %}
+    Rates per week
+{% endblock %}
+{% block rat_mid_jun_rat %}
+    €1750
+{% endblock %}
+{% block rat_mid_sep_rat %}
+    €1750
 {% endblock %}
 
 {% block rat_hig_tit %}
-    Mid season
+    High season
 {% endblock %}
 {% block rat_hig_jul %}
-    May - June
+   July
+{% endblock %}
+{% block rat_hig_aug %}
+    August
 {% endblock %}
 {% block rat_hig_rat %}
     Rates per week
 {% endblock %}
 {% block rat_hig_jul_rat %}
-    €1750
-{% endblock %}
-
-{% block rat_lat_tit %}
-    High season
-{% endblock %}
-{% block rat_lat_sep %}
-   july
-{% endblock %}
-{% block rat_lat_oct %}
-August
-{% endblock %}
-{% block rat_lat_nov %}
-    November
-{% endblock %}
-{% block rat_lat_dec %}
-    December
-{% endblock %}
-{% block rat_lat_rat %}
-    Rates per week
-{% endblock %}
-{% block rat_lat_sep_rat %}
     €2350
 {% endblock %}
-{% block rat_lat_oct_rat %}
+{% block rat_hig_aug_rat %}
     €2350
-{% endblock %}
-{% block rat_lat_nov_rat %}
-    €375
-{% endblock %}    €2350
-
-{% block rat_lat_dec_rat %}
-    €375
 {% endblock %}
 
 {% block are_tit %}
