--- a/website/templates/fr.html
+++ b/website/templates/fr.html
@@ -1,6 +1,6 @@
 {% extends "index.html" %}
 
-{% block lan_cur %}fr{% endblock %}
+{% block lan_cur %}gb{% endblock %}
 
 {% block nav_acc %}
     Hébergements
@@ -183,85 +183,74 @@ Celui-ci se change par adulte et par nuit et s'enlève sur place par chèque ou 
     Informations sur les tarifs et disponibilités
 {% endblock %}
 
-{% block rat_ear_tit %}
+{% block rat_low_tit %}
     Basse saison
 {% endblock %}
-{% block rat_ear_jan %}
+{% block rat_low_apr %}
     Avril
 {% endblock %}
-{% block rat_ear_apr %}
+{% block rat_low_may %}
     Mai
 {% endblock %}
-{% block rat_ear_may %}
-Septembre
+{% block rat_low_sep %}
+    Septembre
 {% endblock %}
-{% block rat_ear_rat %}
+{% block rat_low_rat %}
    Tarifs par semaine
+{% endblock %}
+{% block rat_low_apr_rat %}
+    €1500
+{% endblock %}
+{% block rat_low_may_rat %}
+    €1500
+{% endblock %}
+{% block rat_low_sep_rat %}
+    €1500
+{% endblock %}
 
+{% block rat_mid_tit %}
+    Mi-saison
 {% endblock %}
-{% block rat_ear_jan_rat %}
-    €1200 /  €1500
+{% block rat_mid_jun %}
+    Juin
 {% endblock %}
-{% block rat_ear_apr_rat %}
-€1200 /  €1500
+{% block rat_mid_sep %}
+    Septembre
 {% endblock %}
-{% block rat_ear_may_rat %}
-€1200 /  €1500
+{% block rat_mid_rat %}
+    Tarifs par semaine
+{% endblock %}
+{% block rat_mid_jun_rat %}
+    €1750
+{% endblock %}
+{% block rat_mid_sep_rat %}
+    €1750
 {% endblock %}
 
 {% block rat_hig_tit %}
-    Mi-saison
+    Haute season
 {% endblock %}
 {% block rat_hig_jul %}
-    May - June
+   juillet
+{% endblock %}
+{% block rat_hig_aug %}
+    Août
 {% endblock %}
 {% block rat_hig_rat %}
     Tarifs par semaine
 {% endblock %}
 {% block rat_hig_jul_rat %}
-    €1750
-{% endblock %}
-
-{% block rat_lat_tit %}
-    Haute season
-{% endblock %}
-{% block rat_lat_sep %}
-   juillet
-{% endblock %}
-{% block rat_lat_oct %}
-Août
-
-{% endblock %}
-{% block rat_lat_nov %}
-    November
-{% endblock %}
-{% block rat_lat_dec %}
-    December
-{% endblock %}
-{% block rat_lat_rat %}
-    Tarifs par semaine
-{% endblock %}
-{% block rat_lat_sep_rat %}
     €2350
 {% endblock %}
-{% block rat_lat_oct_rat %}
+{% block rat_hig_aug_rat %}
     €2350
-{% endblock %}
-{% block rat_lat_nov_rat %}
-    €375
-{% endblock %}    €2350
-
-{% block rat_lat_dec_rat %}
-    €375
 {% endblock %}
 
 {% block are_tit %}
     Notre région
-
 {% endblock %}
 {% block are_des %}
     Explorez les environs en choisissant des catégories et en cliquant sur les épingles de la carte pour en savoir plus
-
 {% endblock %}
 {% block are_his %}
     Sites historiques
